--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "nuby-members"]
 	path = nuby-members
 	url = git@github.com:bingomanatee/nuby-members.git
+[submodule "layout/h5"]
+	path = layout/h5
+	url = git@github.com:bingomanatee/nuby-express-HTML5-boilerplate-template.git
